# sample-utils-framework

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dbx/: project.json
.github/workflows/: call-workflow-build-patch-package.yml  call-workflow-build-prerelease-package.yml  call-workflow-build-release-package.yml  call-workflow-deploy.yml  call-workflow-prebuild.yml  call-workflow-sync-databricks-repo  call-workflow-sync-databricks-repo.yml  devops-build-alpha-package-workflow-caller.yml  devops-build-patch-package-workflow-caller.yml  devops-build-release-package-workflow-caller.yml  devops-build-workflow-caller.yml  devops-prebuild-workflow-caller.yml
deployment/cicd/: azure_devops_boards.env
deployment/conf/: deployment.yml.j2
deployment/conf/includes/: jinja_variables.yml
deployment/dbx/includes/: jinja_variables.yml
deployment/service/databricks/dbfs/FILES_LOCATION_CONF/job_configs/: job_config.json
deployment/service/databricks/workspace/scripts/: check_pip.ipynb
deployment/service/databricks/workspace/sit/: test_script_passed.ipynb
deployment/services/databricks/: config.yml
deployment/services/databricks/workspace/UAT/: test_script_failed.ipynb
deployment/services/databricks/workspace/scripts/: check_pip.ipynb
deployment/services/databricks/workspace/sit/: test_script_failed.ipynb
src/framework/utils/deployment_helper/: __init__.py
src/framework/utils/deployment_helper/validation/: __init__.py  common.py
tests/framework/utils/deployment_helper/: __init__.py  conftest.py  people.json
tests/framework/utils/deployment_helper/validation/: __init__.py  test_validation_common.py
