[tool.poetry]
name = "sample-utils-framework"
version = "3.2.0"
description = "common lib for deployment-related"
authors = []
readme = "README.md"
packages = [{ include = "framework", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = { version = "^1.10.2" }
python-dateutil = {version = "^2.8.2" }
pyyaml = {version = "^6.0" }
jinja2 = {version = "^3.1.2" }
typed-argument-parser = {version = "^1.8.0" }

[tool.poetry.group.dev.dependencies]
pyspark = { version = "3.3.0" }
pre-commit = { version = "^2.20.0" }
pytest = { version = "^7.0.0" }
pytest-mock = { version = "^3.7.0" }
GitPython = { version = "^3.1.30" }
pytest-cov = { version = "^4.0.0" }

[tool.poetry.group.interactive.dependencies]
jupyter = { version = "^1.0.0" }

[tool.poetry.group.docs.dependencies]
mkdocs = { version = "^1.4.2" }
mkdocs-material = { version = "^8.5.9" }
mkdocs-git-revision-date-localized-plugin = { version = "^1.1.0" }
mknotebooks = { version = "^0.7.1" }
mkdocstrings = { version = "0.19.0" }
mkdocstrings-python = { version = "^0.7.1" }
mkdocs-section-index = { version = "^0.3.4" }
mkdocs-literate-nav = { version = "^0.5.0" }
mkdocs-gen-files = { version = "^0.4.0" }
mike = { version = "^1.1.2" }
mkdocs-table-reader-plugin = { version = "^1.2" }
interrogate = { version = "^1.5.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 90
force-exclude = "/(docs|conf|experiments|setup)/"


[tool.isort]
profile = "black"
known_pyspark = ["pyspark"]
sections = [
    "FUTURE",
    "STDLIB",
    "PYSPARK",
    "FIRSTPARTY",
    "THIRDPARTY",
    "LOCALFOLDER",
]
import_heading_stdlib = "import: standard" # a module as part of Python's standard library.
import_heading_pyspark = "import: pyspark"
import_heading_firstparty = "import: internal" # a module as being part of the current python project.
import_heading_future = "import: future" # a module as part of Python's internal future compatibility libraries.
import_heading_thirdparty = "import: external" # a module as being part of a third party library.
import_heading_localfolder = "import: private/local" # a module as being a local folder. Generally, this is reserved for relative imports (from . import module).
force_single_line = "true"
include_trailing_comma = "true"
line_length = 90
skip_glob = ["docs/*", "conf/*", "experiments/*", "setup/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.flakeheaven]
max-line-length = 90
max-complexity = 18
exclude = ["README.md", "experiments/*", "docs/*", "conf/*", "setup/*", "deployment/*"]
# https://github.com/flakehell/flakehell/issues/10#issuecomment-822720074
extended_default_ignore = []

[tool.flakeheaven.plugins]
pycodestyle = [
    "+B*",
    "+C*",
    "+E*",
    "+F*",
    "+W*",
    "+T4*",
    "-E203",
    "-E266",
    "-E501",
    "-W503",
    "-F403",
    "-F401",
]
pyflakes = [
    "+B*",
    "+C*",
    "+E*",
    "+F*",
    "+W*",
    "+T4*",
    "-E203",
    "-E266",
    "-E501",
    "-W503",
    "-F403",
    "-F401",
]

[tool.mypy] # only run on src
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
disallow_incomplete_defs = true
no_strict_optional = true
show_error_context = true
pretty = true
scripts_are_modules = true
disable_error_code = ["call-arg"]

[tool.interrogate]
ignore-init-method = false                                  # Ignore __init__ method of classes. [default: False]
ignore-init-module = false                                  # Ignore __init__.py modules. [default: False]
ignore-magic = false                                        # Ignore all magic methods of classes. [default: False]
ignore-semiprivate = false                                  # Ignore semiprivate classes, methods, and functions starting with a single underscore.
ignore-private = false                                      # Ignore private classes, methods, and functions starting with two underscores. [default: False]
ignore-property-decorators = false                          # Ignore methods with property setter/getter decorators. [default: False]
ignore-module = false                                       # Ignore module-level docstrings. [default: False]
ignore-nested-functions = false                             # Ignore nested functions and methods. [default: False]
ignore-nested-classes = false                               # Ignore nested classes. [default: False]
ignore-setters = false                                      # Ignore methods with property setter decorators. [default: False]
fail-under = 90                                             # Fail when coverage % is less than a given amount. [default: 80.0]
exclude = ["setup", "docs", "experiments", "conf", "build", "env"]
verbose = 0                                                 # possible values: 0 (minimal output), 1 (-v), 2 (-vv)
quiet = false                                               # Do not print output [default: False]
whitelist-regex = []
color = true                                                # Toggle color output on/off when printing to stdout. [default: color] or no-color
omit-covered-files = false                                  # Omit reporting files that have 100% documentation coverage.
ignore-regex = []
# generate-badge = "./interrogate_badge.svg"                  # Generate a shields.io status badge (an SVG image) in at a given file or directory.
# badge-format = "svg"

[tool.poetry_bumpversion.file."src/framework/utils/deployment_helper/__init__.py"]
# Duplicate the line above to add more files
